# ci-cd-example

./: app.py  pyproject.toml  test.py  test_app.py
.github/workflows/: ci-cd.yml
