[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-cd-demo"
version = "0.1.0"
description = "Demo Python project for CI/CD pipeline"
authors = [
    { name = "Ya" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.setuptools]
py-modules = ["app"]